# -*- Mode:cmake -*-

####################################################################################################
#                                                                                                  #
# Copyright (C) 2016 University of Hull                                                            #
#                                                                                                  #
####################################################################################################

add_subdirectory(common)
add_subdirectory(gtkmm)
add_subdirectory(qt)
add_subdirectory(wxwidgets)
